--- a/mpgrande/app/templates/app/create_sale.html
+++ b/mpgrande/app/templates/app/create_sale.html
@@ -2,28 +2,15 @@
 
 {% block content %} 
 
-<div class="container">
-    <div class="container-fluid p-0 col-md-8 col-md-offset-2 col-sm-12 form-box">
-        <h2>Crear Venta  🍑</h2>
-        <hr width="30%">
-        <form method="POST">
-            <div class="form-group">
-            
-                {% csrf_token %} <!--validar -->
-
-                {{ from_venta.as_bootstrap }}
-                
-
-                <input class="btn btn-default" type="submit" value="Crear venta">
-
+<body>
+    <h2>Crear Venta</h2>
+        <form method="POST" class="container2">
+            <div class="form1">
+                {% csrf_token %} 
+                {{ from_venta }}
+                <input class="button" type="submit" value="Crear venta">
                 <h2 class="reg-prod">Lista de ventas registrados</h2>
-
-                <hr width="30%">
             </div>
-
-                
-
-            
             <script>
                 function eliminarVenta(id){
                     Swal.fire({
@@ -39,14 +26,8 @@
             
                     }).then(function(result) {
                         if (result.isConfirmed) {
-                        window.location.href = "/delete_sale/"+id+"/"
-                    }
-                    })
-            
-                }
-            
+                        window.location.href = "/delete_sale/"+id+"/"}})}
             </script>
-
             <table class="table table-bordered">
                 <thead>
                     <tr>
@@ -77,11 +58,8 @@
                 <h3>No hay registros</h3>
                 {% endif %}
                 </tbody>
-
-            </table>       
-               
+            </table>         
         </form>
-    </div>
-</div>
+</body>
 
 {% endblock content %}
