--- a/mpgrande/app/templates/app/create_staff.html
+++ b/mpgrande/app/templates/app/create_staff.html
@@ -9,6 +9,7 @@
 {%endblock%} 
 
 <body>
+    <h2>Crear personal</h2>
     <form method="POST" class="container2">
         <div class="form1" >
             {% csrf_token %} <!--validar -->
