--- a/mpgrande/app/static/css/base.css
+++ b/mpgrande/app/static/css/base.css
@@ -15,3 +15,19 @@ body{
     display: grid;
     
 }
+
+.button{
+    border: none;
+    width: 100%;
+    color: white;
+    font-size: 20px;
+    background:  #2e6c47;
+    padding: 15px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+.button:hover{
+    background: cadetblue; 
+
+}
