--- a/mpgrande/app/templates/app/create_participate_auction.html
+++ b/mpgrande/app/templates/app/create_participate_auction.html
@@ -1,53 +1,27 @@
 {% extends 'base/sidebar.html' %}
 
-{% block titulo %} Participar en subasta  {% endblock titulo %}
-
-{% block portada %} Participar en subasta {% endblock portada %}
 
 {% block content %} 
 
-<div class="container">
-    <div class="container-fluid p-0 col-md-8 col-md-offset-2 col-sm-12 form-box">
-        <h2>Participar en subasta 🍑</h2>
-        
-        <hr width="30%">
-        <form method="POST">
-            <div class="form-group">
-            
-              
+<body>
+    <h2>Participar en subasta</h2>
+        <form method="POST" class="container2">
+            <div class="form1">
                 {% for p in solicitudes %} 
-                
-
                     {% if p.id == id_solicitud.id %}
-
-                      
-                       <div>
+                    <div>
                         <h2>Productos de la subasta:</h4>
                         <h3>Producto 1: </h1> {{ p.fk_solicitud.fk_frutas_espacio1  }}
                         <h3>Producto 2: </h1> {{ p.fk_solicitud.fk_frutas_espacio2  }}    
                         <h3>Producto 3: </h1> {{ p.fk_solicitud.fk_frutas_espacio2  }}   
-
-                       </div>
+                    </div>
 
                     {% endif %}
-
                 {% endfor %} 
-
-                {% csrf_token %} <!--validar -->
-
-                {{ formulario.as_bootstrap }}
-
-                <input class="btn btn-default" type="submit" value="Iniciar subasta">
-
-                
-
-                <hr width="30%">
+                {% csrf_token %}
+                {{ formulario}}
+                <input class="button" type="submit" value="Iniciar subasta">
             </div>
-
-           
-               
         </form>
-    </div>
-</div>
-
+</body>
 {% endblock content %}
