Correccion de templates part4

--- a/mpgrande/app/templates/app/create_auction.html
+++ b/mpgrande/app/templates/app/create_auction.html
@@ -1,7 +1,13 @@
 {% extends 'base/base.html' %}
 
-{% block content %} 
+{%load static%} 
 
+{% load permission_tags %}
+{% block content %}
+
+{%block css%} 
+<link rel="stylesheet" href="{% static '/css/base.css'%}">
+{%endblock%} 
 <body>
     <h2>Crear Producto</h2>
     <form method="container2">
