--- a/mpgrande/app/templates/app/create_sale.html
+++ b/mpgrande/app/templates/app/create_sale.html
@@ -2,11 +2,12 @@
 
 {%load static%} 
 
+{% load permission_tags %}
 {% block content %}
 
 {%block css%} 
 <link rel="stylesheet" href="{% static '/css/base.css'%}">
-{%endblock%}  
+{%endblock%} 
 
 <body>
     <h2>Crear Venta</h2>
