--- a/mpgrande/app/templates/app/list_staff.html
+++ b/mpgrande/app/templates/app/list_staff.html
@@ -2,12 +2,12 @@
 
 {%load static%} 
 
+{% load permission_tags %}
 {% block content %}
 
 {%block css%} 
 <link rel="stylesheet" href="{% static '/css/base.css'%}">
 {%endblock%} 
-
 
 
 <script>
