--- a/mpgrande/app/templates/app/pdf_template_trans.html
+++ b/mpgrande/app/templates/app/pdf_template_trans.html
@@ -2,7 +2,7 @@
 
 
 
-        <center> <h2>Boleta </h2> </center>
+        <h2>Boleta </h2> 
         
 
          
@@ -48,7 +48,7 @@
         <h3>No hay registros</h3>
         {% endif %}
         
-        <center><h2>-------------------------- MAIPO GRANDE ---------------------------------</h2> </center>
+        <h2>-------------------------- MAIPO GRANDE ---------------------------------</h2> 
     </table>       
        
 </form>
