--- a/mpgrande/app/templates/app/create_request.html
+++ b/mpgrande/app/templates/app/create_request.html
@@ -1,13 +1,13 @@
 {% extends 'base/sidebar.html' %}
 
-{{%load static%} 
+{%load static%} 
 
+{% load permission_tags %}
 {% block content %}
 
 {%block css%} 
 <link rel="stylesheet" href="{% static '/css/base.css'%}">
 {%endblock%} 
-
 {% load permission_tags %}
 <body>
     {% if user|has_role:'externo' or user|has_role:'interno'  %}
