--- a/mpgrande/app/templates/app/create_start_auction.html
+++ b/mpgrande/app/templates/app/create_start_auction.html
@@ -3,11 +3,12 @@
 
 {%load static%} 
 
+{% load permission_tags %}
 {% block content %}
 
 {%block css%} 
 <link rel="stylesheet" href="{% static '/css/base.css'%}">
-{%endblock%}  
+{%endblock%} 
 
 <body>
     {% if user|has_role:'productor'   %}
