--- a/mpgrande/app/templates/app/graphics2.html
+++ b/mpgrande/app/templates/app/graphics2.html
@@ -1,8 +1,13 @@
 {% extends 'base/sidebar.html' %}
 
-{% block content %} 
+{%load static%} 
 
-{% load static %}
+{% load permission_tags %}
+{% block content %}
+
+{%block css%} 
+<link rel="stylesheet" href="{% static '/css/base.css'%}">
+{%endblock%} 
 
 <body>
     <h2> Hola, {{user.username}}</h2> 
