--- a/mpgrande/app/templates/app/info_ticket.html
+++ b/mpgrande/app/templates/app/info_ticket.html
@@ -2,15 +2,16 @@
 
 {%load static%} 
 
+{% load permission_tags %}
 {% block content %}
 
 {%block css%} 
 <link rel="stylesheet" href="{% static '/css/base.css'%}">
-{%endblock%}  
+{%endblock%} 
 
 <div class="container">
     <div class="container-fluid p-0 col-md-8 col-md-offset-2 col-sm-12 form-box">
-        <h2>Información boleta 🍑</h2>
+        <h2>Información boleta </h2>
         
         <hr width="30%">
         <form method="POST">
