--- a/mpgrande/app/templates/app/list_auction.html
+++ b/mpgrande/app/templates/app/list_auction.html
@@ -2,11 +2,12 @@
 
 {%load static%} 
 
+{% load permission_tags %}
 {% block content %}
 
 {%block css%} 
 <link rel="stylesheet" href="{% static '/css/base.css'%}">
-{%endblock%}  
+{%endblock%} 
 
 <div class="container">
     <div class="col-md-6 col-md-offset-3 form-box">
