--- a/mpgrande/app/templates/app/list_producer_request.html
+++ b/mpgrande/app/templates/app/list_producer_request.html
@@ -1,7 +1,13 @@
 {% extends 'base/sidebar.html' %}
-{% block content %} 
 
+{%load static%} 
 
+{% load permission_tags %}
+{% block content %}
+
+{%block css%} 
+<link rel="stylesheet" href="{% static '/css/base.css'%}">
+{%endblock%} 
 
 <script>
     function eliminar(id){
