--- a/mpgrande/app/templates/app/modify_product.html
+++ b/mpgrande/app/templates/app/modify_product.html
@@ -2,11 +2,12 @@
 
 {%load static%} 
 
+{% load permission_tags %}
 {% block content %}
 
 {%block css%} 
 <link rel="stylesheet" href="{% static '/css/base.css'%}">
-{%endblock%}  
+{%endblock%} 
 
 <div class="container">
     <div class="container-fluid p-0 col-md-8 col-md-offset-2 col-sm-12 form-box">
