--- a/mpgrande/app/templates/app/modify_staff.html
+++ b/mpgrande/app/templates/app/modify_staff.html
@@ -1,14 +1,13 @@
-
 {% extends 'base/sidebar.html' %}
 
 {%load static%} 
 
+{% load permission_tags %}
 {% block content %}
 
 {%block css%} 
 <link rel="stylesheet" href="{% static '/css/base.css'%}">
 {%endblock%} 
-
 <div class="container">
     <div class="col-md-8 col-md-offset-2 form-box">
         <h2>Modificar personal</h2>
