--- a/mpgrande/app/templates/app/modify_user.html
+++ b/mpgrande/app/templates/app/modify_user.html
@@ -2,12 +2,12 @@
 
 {%load static%} 
 
+{% load permission_tags %}
 {% block content %}
 
 {%block css%} 
 <link rel="stylesheet" href="{% static '/css/base.css'%}">
 {%endblock%} 
-
 <div class="container">
     <div class="col-md-6 col-md-offset-3 form-box">
         <h2>Modificar Usuario</h2>
