--- a/mpgrande/app/templates/app/sales_list.html
+++ b/mpgrande/app/templates/app/sales_list.html
@@ -2,12 +2,12 @@
 
 {%load static%} 
 
+{% load permission_tags %}
 {% block content %}
 
 {%block css%} 
 <link rel="stylesheet" href="{% static '/css/base.css'%}">
-{%endblock%}  
-
+{%endblock%} 
 <div class="container">
     <div class="col-md-7 col-md-offset-3 form-box">
         <h2>Mis ventas</h2>
